--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,8 @@ title: Sidharth Satya
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+
+logo: /assets/logo_photo.jpeg
+github_url: https://github.com/sidsatya
+linkedin_url: https://www.linkedin.com/in/sidharthsatya/
